objects/FinServ__FinancialGoal__c.object
<CustomObject>
    <description>Tracks a client&apos;s goal.</description>
    <fields>
        <fullName>AW_AmountNeededFV__c</fullName>
        <description>Amount Needed for Future Value</description>
        <label>Amount Needed FV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_AmountNeededPV__c</fullName>
        <description>Amount Needed for Present Value</description>
        <label>Amount Needed PV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_AnnualEscalation__c</fullName>
        <description>Percentage of Annual Escalation</description>
        <label>Annual Escalation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Apply_Goal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The box is auto checked when the Financial Goal is achieved.</description>
        <label>Apply Goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_AssetsAndLiabilities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ability to Link/manually add a product</description>
        <label>Assets and Liabilities</label>
        <referenceTo>FinServ__AssetsAndLiabilities__c</referenceTo>
        <relationshipLabel>Financial Goals</relationshipLabel>
        <relationshipName>Financial_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_CPI_Percentage__c</fullName>
        <description>Percentage CPI</description>
        <label>CPI</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Created_Date_From_Source__c</fullName>
        <description>This field is designed to capture the date when the financial goal was created from a specific source</description>
        <label>Created Date From Source</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_FNA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related FNA</description>
        <label>FNA</label>
        <referenceTo>AW_FNA__c</referenceTo>
        <relationshipLabel>Financial Goals</relationshipLabel>
        <relationshipName>Financial_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Frequency_Months__c</fullName>
        <description>Enter the frequency of months</description>
        <label>Frequency (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_GoalPicture__c</fullName>
        <description>Describe the goal [ Here you can attach pictures as well ]</description>
        <label>Goal Picture</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AW_GoalTypeIfOther__c</fullName>
        <description>Type Goal if selected Others</description>
        <label>Goal Type if Other</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Goal_Start_Date__c</fullName>
        <description>Starting date for Goal</description>
        <label>Goal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Goal_Type__c</fullName>
        <description>Select Goal Type</description>
        <label>Goal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Growth_Strategy__c</fullName>
        <description>Short description of Growth Strategy</description>
        <label>Growth Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_IsCreator__c</fullName>
        <description>Used to identify if the logged in user is the creator</description>
        <formula>CreatedById = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_IsInvestmentGoal__c</fullName>
        <description>Check if this is an investment is a financial goal</description>
        <formula>ISPICKVAL(AW_ProductType__c, &apos;Investment&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Investment Goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_IsProtectionGoal__c</fullName>
        <description>Is this a protection goal?</description>
        <formula>ISPICKVAL(AW_ProductType__c, &apos;Protection&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Protection Goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_Last_Updated_Date_from_Source__c</fullName>
        <description>Date of Last Update from Source</description>
        <label>Last Updated Date From Source</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_LifeEventLink__c</fullName>
        <description>Link for Life Event</description>
        <label>Life Event Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccountId__c</fullName>
        <description>Used to store the Master Account Id, if Master Account Exists for the Active Account</description>
        <formula>IF(AND(ISPICKVAL(FinServ__PrimaryOwner__r.FinServ__Status__c , &apos;Active&apos;), NOT(ISNULL(FinServ__PrimaryOwner__r.AW_ParentAccount__r.Id))),FinServ__PrimaryOwner__r.AW_ParentAccount__r.Id,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_MasterAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MasterAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the Master Account Details</description>
        <label>MasterAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Goals (MasterAccount)</relationshipLabel>
        <relationshipName>Financial_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Nominal_Calculated_Value__c</fullName>
        <description>The calculated nominal value of goal</description>
        <label>Nominal Calculated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_OtherValue__c</fullName>
        <description>This field will be used to capture the value of other assets that are not associated with an investment or risk product, i.e. cash on hand, collections etc.</description>
        <label>Other Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Owner_UACFID__c</fullName>
        <description>The UACFID of Owner</description>
        <formula>Owner:User.AW_UACFID__c</formula>
        <label>Owner UACFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ParentAccountOwnerId__c</fullName>
        <description>Used to store the Parent Account Owner Id</description>
        <formula>IF(NOT(ISNULL(FinServ__PrimaryOwner__r.Id)),FinServ__PrimaryOwner__r.OwnerId,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AW_ParentAccountOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PercentageComplete__c</fullName>
        <description>The percentage completion of financial goal</description>
        <formula>IF(FinServ__TargetValue__c=0,0,FinServ__ActualValue__c / FinServ__TargetValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_PriorityLevel__c</fullName>
        <description>Select the Priority Level</description>
        <label>Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ProbabilityOfOutcome__c</fullName>
        <description>Probability % of favourable outcome</description>
        <label>Probability of Outcome</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_ProductType__c</fullName>
        <description>Select Product Type</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ProvideForDependents__c</fullName>
        <description>The amount payable to dependents upon death</description>
        <label>Provide for Dependents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Real_Calculated_Value__c</fullName>
        <description>The real calculated goal value</description>
        <label>Real Calculated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Recurrence_Count__c</fullName>
        <description>The count of recurrence</description>
        <label>Recurrence Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field provides a way to link a specific &apos;Financial Goal&apos; record to a related &apos;Opportunity&apos; record</description>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Financial Goals</relationshipLabel>
        <relationshipName>Financial_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_RiskNeedExistingValue__c</fullName>
        <description>Displays the value of the existing cover that may be in place for a specific Risk Need</description>
        <formula>FinServ__ActualValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Cover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_RiskNeedLastUpdate__c</fullName>
        <description>Displays the date at which the values of the Risk Need was last updated</description>
        <formula>FinServ__TargetDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_RiskNeed__c</fullName>
        <description>Displays the total value required to reach the total Risk Need identified</description>
        <formula>FinServ__TargetValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Need</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Save_Until__c</fullName>
        <description>Till which time does the customer wants to save</description>
        <label>Save Until</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Saving_For__c</fullName>
        <description>What is the customer saving for?</description>
        <label>Saving For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SettleEstate__c</fullName>
        <description>The amount allocated to cover costs occurred when settling the estate</description>
        <label>Settle Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Shortfall__c</fullName>
        <description>This field calculates the Shortfall/Surplus value which is the Target Value - Actual Value. The amount required to meet the target amount/ the amount exceeding the target amount</description>
        <formula>FinServ__ActualValue__c - FinServ__TargetValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shortfall/Surplus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_SortingDate__c</fullName>
        <description>Used by lightning component to sort life events and goals</description>
        <formula>FinServ__TargetDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sorting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>Select Source System Name</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_Source_System_Names</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Suggested_Contribution__c</fullName>
        <description>The suggested amount to contribute</description>
        <label>Suggested Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Target_Return_Percentage__c</fullName>
        <description>Percentage of Targeted Return</description>
        <label>Target Return</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Target_Value_PV__c</fullName>
        <description>Target Value Present Value</description>
        <label>Target Value (PV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Taxable__c</fullName>
        <description>Taxability Description</description>
        <label>Taxable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_TermOfProvision__c</fullName>
        <description>Term for Provision</description>
        <label>Term of Provision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TotalAssetAmount__c</fullName>
        <description>Roll up field on Assets</description>
        <label>Total Assets Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalFinancialAmount__c</fullName>
        <description>This field will be rolled up of current value on Financial Account</description>
        <label>Total Financial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalInsuranceAmount__c</fullName>
        <description>This field will be rolled up of current value on Insurance Policy</description>
        <label>Total Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_TotalLiabilitiesAmount__c</fullName>
        <description>This field will be rolled up of current value on Asset &amp; Liabilties</description>
        <label>Total Liabilities Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Total_Current_Market_Value__c</fullName>
        <description>The current market value</description>
        <label>Recommended Lumpsum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Total_Goal_Amount__c</fullName>
        <description>This field is used to store the total goal amount for a financial goal</description>
        <label>Total Goal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Type_Description__c</fullName>
        <description>Enter Description</description>
        <label>Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ActualValue__c</fullName>
        <inlineHelpText>The value of the asset allocated to the Goal - This is pre-populated when linking a Financial Account to a goal.</inlineHelpText>
        <label>Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Description__c</fullName>
        <label>Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this goal is associated with.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Financial Goals</relationshipLabel>
        <relationshipName>HouseholdFinancialGoals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__InitialValue__c</fullName>
        <label>Initial Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryOwner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IndustriesIndividual</value>
            </filterItems>
            <filterItems>
                <field>Account.FinServ__IndividualType__c</field>
                <operation>equals</operation>
                <value>Individual</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Financial Goals</relationshipLabel>
        <relationshipName>ClientFinancialGoals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TargetDate__c</fullName>
        <inlineHelpText>The date at which you want to reach a 100% completion on the goal.</inlineHelpText>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__TargetValue__c</fullName>
        <inlineHelpText>The target value that you would like to reach for this specific goal.</inlineHelpText>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AW_ProductType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Saving for a rainy day</fullName>
                </value>
                <value>
                    <fullName>Lifestyle goals</fullName>
                </value>
                <value>
                    <fullName>Self-Improvement goals</fullName>
                </value>
                <value>
                    <fullName>Life Cover - Lump sum</fullName>
                </value>
                <value>
                    <fullName>Critical Illness - Lump sum</fullName>
                </value>
                <value>
                    <fullName>Disability Cover - Lump sum</fullName>
                </value>
                <value>
                    <fullName>Temporary Sickness - Income</fullName>
                </value>
                <value>
                    <fullName>Disability Cover - Income</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financial Goal</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__Type__c</columns>
        <columns>FinServ__Description__c</columns>
        <columns>FinServ__ActualValue__c</columns>
        <columns>FinServ__TargetValue__c</columns>
        <columns>FinServ__PrimaryOwner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Goals</pluralLabel>
    <recordTypes>
        <fullName>AW_Capital_Goal</fullName>
        <active>true</active>
        <label>Capital Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>AW_Income_Goal</fullName>
        <active>true</active>
        <label>Income Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>AW_Liberty_Client_Goal</fullName>
        <active>true</active>
        <label>Liberty Client Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>AW_RiskCapitalGoal</fullName>
        <active>true</active>
        <description>This Record Type will be used when a Risk Capital Goal is created</description>
        <label>Risk Capital Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>AW_RiskIncomeGoal</fullName>
        <active>true</active>
        <description>Represents a Risk Income Goal</description>
        <label>Risk Income Goal</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AW_Goaltypenorother</fullName>
        <active>true</active>
        <description>When Other is not selected in Type picklist, but Other Goal Type field is filled out.</description>
        <errorConditionFormula>AND
(
	OR
	(
		ISCHANGED(AW_GoalTypeIfOther__c),
		ISNEW()
	),
	
	NOT(ISBLANK(AW_GoalTypeIfOther__c)),
	TEXT(FinServ__Type__c) &lt;&gt; &quot;Other&quot;
)</errorConditionFormula>
        <errorDisplayField>AW_GoalTypeIfOther__c</errorDisplayField>
        <errorMessage>Cannot enter Other Goal Type if Other is not selected as Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AW_OtherGoalType</fullName>
        <active>true</active>
        <description>Prompt to the user to specify the goal when selecting other goal type</description>
        <errorConditionFormula>AND
(
  ISPICKVAL( FinServ__Type__c , &apos;Other&apos;),
  ISBLANK( AW_GoalTypeIfOther__c )  
)</errorConditionFormula>
        <errorDisplayField>AW_GoalTypeIfOther__c</errorDisplayField>
        <errorMessage>Please fill Other Goal Type.</errorMessage>
    </validationRules>
</CustomObject>